:green_apple: fix scrolling behavior on iOS

--- a/src/components/styles/ListContainer.css
+++ b/src/components/styles/ListContainer.css
@@ -1,6 +1,8 @@
 .list-container {
   overflow-y: scroll;
   height: calc(100vh - 56px);
+  scroll-behavior: smooth;
+  -webkit-overflow-scrolling: touch;
 }
 ::-webkit-scrollbar {
   width: 5px;
@@ -9,7 +11,7 @@
 ::-webkit-scrollbar-track
 {
 	border-radius: 10px;
-	background-color: #F5F5F5;
+	background-color: rgba(0,0,0,0.009);
 }
 
 ::-webkit-scrollbar-thumb
